# AIFest

./: .gitignore  CMakeLists.txt
PawnsFest/: Makefile
PawnsFest/chess/: chess.py
PowerFourFest/: AStar-Taquin.py
Project/: CMakeLists.txt
Project/src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Grid.cpp  Grid.h  Tile.cpp  Tile.h  main.cpp
SheepsFest/: Reversi.py  game-reversi.py
SimsFest/: expert.py
SteeringsFest/: CMakeLists.txt
SteeringsFest/src/: Scene.cpp  Scene.hpp  Track.cpp  Vehicle.hpp  main.cpp  utils.cpp  utils.hpp
SteeringsFest/src/elements/: AbstractElement.cpp  AbstractElement.hpp  Boid.cpp  Boid.hpp  DynamicElement.cpp  DynamicElement.hpp  StaticElement.cpp  StaticElement.hpp
src/: Scene.cpp  Scene.hpp  Track.cpp  Track.hpp  Vehicle.cpp  Vehicle.hpp  main.cpp  utils.cpp  utils.hpp
