PROJECT(STEERINGSFEST)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(SFML 2 REQUIRED graphics window system)

SET(SOURCES src/Vehicle.cpp src/Vehicle.hpp src/utils.hpp src/main.cpp src/Scene.cpp src/Scene.hpp src/Track.cpp src/Track.hpp src/utils.cpp)
SET(EXECUTABLE_NAME Steerings)
add_executable(${EXECUTABLE_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} m)
IF(SFML_FOUND)
    INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
endif()